Fix spacing for the Featured Footer

--- a/less/quicksilver/_variables.less
+++ b/less/quicksilver/_variables.less
@@ -427,7 +427,7 @@
 @featured-secondary-text-color:@white;
 
 //== Featured Footer
-@featured-footer-padding:30px 30px;
+@featured-footer-padding:30px 0px;
 @featured-footer-text-align:center;
 @featured-footer-text-color:@white;
 @featured-footer-icon-size:40px;
